Switch transcript entries + fixes (#334)
* Allow avLinks to switch transcripts, scroll media in view on click, don't autoplay

* Fix fullscreen detail layout problems connected to transcripts

--- a/web/war/src/main/webapp/less/detail/detail.less
+++ b/web/war/src/main/webapp/less/detail/detail.less
@@ -18,7 +18,6 @@
   padding: 0;
 
   .org-visallo-layout-root {
-    flex: 1;
     overflow-x: hidden;
     width: 100%;
 
